--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -304,6 +304,10 @@ if (selected) scrollDayIntoView(selected);
 
 
 
+
+
+
+
     async function loadTasks() {
   if (!adminEmail || !selectedDate) return;
 
@@ -323,38 +327,49 @@ if (selected) scrollDayIntoView(selected);
       if (selected < start || selected > end) return;
 
       const users = task.users || [];
+      if (!users.length) return;
+
       const completions = task.completions?.[selectedDate] || [];
       const repeat = task.repeat || "Once";
 
-      let times = 1;
-      if (repeat === "Daily") times = task.timesPerDay || 1;
-      if (repeat === "Weekly") times = task.timesPerWeek || 1;
-      if (repeat === "Monthly") times = task.timesPerMonth || 1;
+      let totalRequired = 1;
+      if (repeat === "Daily") totalRequired = task.timesPerDay || 1;
+      if (repeat === "Weekly") totalRequired = task.timesPerWeek || 1;
+      if (repeat === "Monthly") totalRequired = task.timesPerMonth || 1;
 
-      users.forEach(user => {
-        // Count how many times this user has completed
+      const daysSinceStart = Math.floor((selected - start) / (1000 * 60 * 60 * 24));
+      let rotation = [];
+
+      // Build rotation starting from the current user
+      for (let i = 0; i < totalRequired; i++) {
+        const userIndex = (daysSinceStart + i) % users.length;
+        rotation.push(users[userIndex]);
+      }
+
+      rotation.forEach((user, index) => {
         const completedCount = completions.filter(u => u === user).length;
+        const isCompleted = completedCount > 0;
 
-        for (let i = 0; i < times; i++) {
-          const isCompleted = i < completedCount;
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${task.title}</td>
+          <td>${user}</td>
+          <td class="${isCompleted ? 'status-completed' : 'status-pending'}">
+            ${isCompleted ? "Completed" : "Pending"}
+          </td>
+          <td>
+            ${isCompleted
+              ? `<button class="action-btn accept-btn" onclick="handleAction('${task.title}', '${user}', 'accept')">Accept</button>
+                 <button class="action-btn decline-btn" onclick="handleAction('${task.title}', '${user}', 'decline')">Decline</button>`
+              : "—"}
+          </td>
+        `;
+        adminTasksBody.appendChild(row);
+        hasAny = true;
 
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td>${task.title}</td>
-            <td>${user}</td>
-            <td class="${isCompleted ? 'status-completed' : 'status-pending'}">
-              ${isCompleted ? "Completed" : "Pending"}
-            </td>
-            <td>
-              ${isCompleted
-                ? `<button class="action-btn accept-btn" onclick="handleAction('${task.title}', '${user}', 'accept')">Accept</button>
-                   <button class="action-btn decline-btn" onclick="handleAction('${task.title}', '${user}', 'decline')">Decline</button>`
-                : "—"}
-            </td>
-          `;
-          adminTasksBody.appendChild(row);
-          hasAny = true;
-        }
+        // Remove this completion from the list so we don't reuse it
+        const completionIndex = completions.indexOf(user);
+        if (completionIndex !== -1) completions.splice(completionIndex, 1);
       });
     });
 
@@ -370,6 +385,8 @@ if (selected) scrollDayIntoView(selected);
     adminTasksBody.appendChild(row);
   }
 }
+
+
 
 
 
