Current Turn Task adaption #18

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -636,7 +636,8 @@ async function loadTasksForDate(selectedDate) {
         taskDiv.dataset.taskDate = task.date;
 
         // Determine whose turn it is
-        let currentTurn = getTurnByDate(task, selectedDate);
+        let currentTurn = task.turn || getTurnByDate(task, selectedDate);
+
 
 
 
